# imget

./: .gitignore  Cargo.toml  README.md
src/: archives.rs  change_watcher.rs  error.rs  folders.rs  main.rs  thumbnails.rs  utils.rs
