[package]
name = "imget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
image = "0.24.7"
mime = "0.3.17"
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
sha2 = "0.10.7"
tokio = "1.32.0"
